# imtihon-7-oy

./: .env.example  .gitignore  README.md  pyproject.toml
.playwright-mcp/: page-2026-07-02T00-23-19-162Z.yml  page-2026-07-02T00-23-38-583Z.yml  page-2026-07-02T00-24-00-055Z.yml  page-2026-07-02T00-24-15-825Z.yml  page-2026-07-02T00-24-30-170Z.yml  page-2026-07-02T00-24-44-945Z.yml  page-2026-07-02T00-25-08-109Z.yml  page-2026-07-02T05-04-20-201Z.yml  page-2026-07-02T05-04-39-684Z.yml  page-2026-07-02T05-04-46-220Z.yml  page-2026-07-02T05-04-57-448Z.yml  page-2026-07-02T05-10-14-223Z.yml  page-2026-07-02T05-10-38-993Z.yml  page-2026-07-02T05-10-49-734Z.yml  page-2026-07-02T05-11-03-331Z.yml  page-2026-07-02T05-11-17-116Z.yml  page-2026-07-02T05-11-30-412Z.yml  page-2026-07-02T05-12-01-441Z.yml  page-2026-07-02T05-12-18-218Z.yml  page-2026-07-02T05-36-17-864Z.yml  page-2026-07-02T05-36-38-547Z.yml  page-2026-07-02T05-36-44-924Z.yml  page-2026-07-02T05-37-22-723Z.yml
apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/ai/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/materials/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/ratings/: admin.py  models.py  serializers.py  urls.py  views.py
apps/subjects/: admin.py  models.py  serializers.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
video/: package-lock.json  package.json
(+44 files in other folders)
